corpus/comments.txt
================================================================================
Single line comment
================================================================================

-- This is a comment

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
Multi line comment
================================================================================

--[[
This is a comment
]]

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
Multi line comment with multiple equal signs
================================================================================

--[==[
This is a comment
]==]

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
Nested comments
================================================================================

--[===[
This is a comment
[=[ with some ]=]
[==[ nesting ]==]
]===]

--------------------------------------------------------------------------------

(program
  (comment))

================================================================================
Inline comment
================================================================================

local x --[[ This is a comment ]] = 5

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var_declarators
      (var
        (identifier)))
    (comment)
    (expressions
      (number))))

================================================================================
line comment that starts with --[
================================================================================

--[ stuff
local x = 5

--------------------------------------------------------------------------------

(program
  (comment)
  (var_declaration
    (scope)
    (var_declarators
      (var
        (identifier)))
    (expressions
      (number))))

================================================================================
line comment with whitespace -- [[
================================================================================

-- [[ hi
local x = 5

--------------------------------------------------------------------------------

(program
  (comment)
  (var_declaration
    (scope)
    (var_declarators
      (var
        (identifier)))
    (expressions
      (number))))

================================================================================
Shebang comment
================================================================================
#!/usr/bin/env tl run

--------------------------------------------------------------------------------

(program
  (shebang_comment))
