corpus/enum_block.txt
================================================================================
Empty enum
================================================================================

local type foo = enum
end

--------------------------------------------------------------------------------

(program
  (type_declaration
    (scope)
    (type_name)
    (enum_body)))

================================================================================
Enum with stuff
================================================================================

local type foo = enum
   "hello"
   "world"
end

--------------------------------------------------------------------------------

(program
  (type_declaration
    (scope)
    (type_name)
    (enum_body
      (string
        (string_content))
      (string
        (string_content)))))

================================================================================
Empty enum (shorthand)
================================================================================

local enum foo
end

--------------------------------------------------------------------------------

(program
  (enum_declaration
    scope: (scope)
    name: (identifier)
    (enum_body)))

================================================================================
Enum with stuff (shorthand)
================================================================================

local enum foo
   "foo"
   "bar"
   "baz"
end

--------------------------------------------------------------------------------

(program
  (enum_declaration
    scope: (scope)
    name: (identifier)
    (enum_body
      (string
        content: (string_content))
      (string
        content: (string_content))
      (string
        content: (string_content)))))
