corpus/numbers.txt
================================================================================
Floats
================================================================================

local x = 4.63

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var_declarators
      (var
        (identifier)))
    (expressions
      (number))))

================================================================================
Hex number
================================================================================

local x = 0xf22

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var_declarators
      (var
        (identifier)))
    (expressions
      (number))))

================================================================================
Hex float
================================================================================

local x = 0xf22.fffeec1

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var_declarators
      (var
        (identifier)))
    (expressions
      (number))))

================================================================================
Exponent
================================================================================

local x = 3e2

--------------------------------------------------------------------------------

(program
  (var_declaration
    (scope)
    (var_declarators
      (var
        (identifier)))
    (expressions
      (number))))
